--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,3 +1,4 @@
 <h1>Hello world</h1>
 <p>This is rails...<p>
+<p>sample Articles application</p>
 <p>Find me in app/views/articles/index.html.erb</p>
