--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,3 +2,4 @@
 <p>This is rails...<p>
 <p>sample Articles application</p>
 <p>Find me in app/views/articles/index.html.erb</p>
+<h2>hello world i am fine</h2>
