--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,3 +3,4 @@
 <p>sample Articles application</p>
 <p>Find me in app/views/articles/index.html.erb</p>
 <h2>hello world i am fine</h2>
+<h1>hello__________</h1>
